# pdfizer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: abbreviations.toml  default.toml  normalizer.toml  pdfizer.toml
docs/: packaging.md  roadmap.md
docs/qa/: pdf-tts-acceptance-gates.md  pdf-tts-manual-checklist.md
docs/roadmaps/: pdf-tts-integration-roadmap.md
src/: app.rs  config.rs  main.rs  pdf.rs  tts.rs
tests/: app_unit.rs  config_unit.rs  fixture_pdf.rs  tts_unit.rs
tests/fixtures/: pdf_tts_fixture_corpus.toml
